# crud_escolar

./: README.md~  main.py  pyproject.toml
