[tool.poetry]
name = "cadastro_escolar"
version = "0.1.0"
description = ""
authors = ["joaofurquim <joaopedrofurquim@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
